# libuipc-samples-win

./: .gitignore  README.md  pyproject.toml  run_sample.bat  setup_local_pyuipc.bat  setup_pypi_pyuipc.bat
examples/: mk_video.py
examples/0_check_libuipc/: main.py
examples/10_ramp_sliding/: main.py
examples/11_bunny_cloth/: main.py
examples/12_soft_transform_constraint/: main.py
examples/13_init_velocity/: main.py
examples/14_load_scene/: build_scene.py  edit_scene.py  main.py
examples/15_scene_commit/: client_get.py  server_run.py
examples/16_geometry_operation/: extract_surface.py  split.py
examples/17_affine_body_revolute_joint/: main.py
examples/18_pendulum_joint/: main.py
examples/19_global_vertex_offset/: main.py
examples/1_hello_libuipc/: main.py
examples/20_contact_system_feature/: main.py
examples/21_interop/: backend_to_warp.py  torch_buffer.py  warp_buffer.py
examples/22_soft_vertex_stitch/: main.py
examples/23_kirchoff_rod_bending/: main.py
examples/24_sewing_pattern/: main.py
examples/25_hello_py_engine/: main.py
examples/26_bunny_cloth_async/: main.py
examples/27_compute_mesh_d_hat/: main.py
examples/28_advanced_scene_config/: main.py
examples/29_subscene/: main.py
examples/2_walking_cube/: main.py
examples/30_check_uid/: main.py
examples/31_state_accessor_feature/: main.py
examples/32_affine_body_external_body_force/: asset_dir.py  main.py
examples/33_external_articulation_constraint/: main.py
examples/34_cloth_stack/: main.py
examples/36_vertex_stitch_family/: main.py
examples/9_pendulum/: main.py
(+79 files in other folders)
